<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RECRUTRAK5000</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_prompt">Input user name</string>
    <string name="student_id_prompt">Student ID</string>
    <string name="student_lname_prompt">Last Name</string>
    <string name="login_button">Login</string>
    <string name="administrator_username_prompt">Username</string>
    <string name="administrator_password_prompt">Password</string>
    <string name="home">Home</string>
    <string name="student_login">Student Login</string>
    <string name="administrator_login">Administrator Login</string>
    <string name="request_visit">Request Visit</string>
    <string name="faculty_main">Faculty Main</string>
    <string name="student_welcome">Welcome Student!</string>
    <string name="view_meetings">View Meetings</string>
    <string name="set_exceptions">Set Exceptions</string>
    <string name="view_requests">View Requests</string>
    <string name="set_availability">Set Availability</string>
    <string name="view_faculty">View Faculty</string>
    <string name="meeting_details">Meeting Details</string>
    <string name="meeting_location_map">Meeting Location Map</string>
    <string name="survey">Survey</string>
    <string name="view_meetings">View Meetings</string>
    <string name="request_details">Request Details</string>
<<<<<<< HEAD
    <string name="returning_student">Returning Student?</string>
    <string name="new_student">New Student?</string>
    <string name="student_login">Student Login</string>
    <string name="request_visit">Request A Visit</string>
    <string name="admin_login">Administrator Login</string>
    <string name="login_as">Login as:</string>
    <string name="staff">Staff</string>
    <string name="faculty">Faculty</string>
    <string name="create_meeting">Create Meeting</string>
    <string name="location_colon">Location:</string>
    <string name="exception_colon">Exception:</string>
    <string name="test_data">Test Data</string>
    <string name="meeting">Meeting</string>
    <string name="meeting_date_colon">Meeting Date:</string>
    <string name="meeting_title_colon">Meeting Title:</string>
    <string name="faculty_member_colon">Faculty Member:</string>
    <string name="logout">Logout</string>
    <string name="meeting_time_colon">Meeting Time:</string>
    <string name="student_name_colon">Student Name:</string>
    <string name="student_email_colon">Student E-mail:</string>
    <string name="student_phone_colon">Student Phone Number:</string>
    <string name="save_notes">Save Notes</string>
    <string name="notes_colon">Notes:</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="submit">Submit</string>
    <string name="exceptions_text">Exceptions to normal availability:</string>
    <string name="select_availability">Select your available times for meetings with students:</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="faculty_email_colon">Faculty E-mail:</string>
    <string name="faculty_phone_colon">Faculty Phone Number:</string>
    <string name="new_request">New Request</string>
    <string name="meetings">Meetings</string>
    <string name="requests">Requests</string>
=======
    <string name="staff_main">Staff Main</string>
    <string name="create_meeting">Create Meeting</string>
>>>>>>> FETCH_HEAD

</resources>
