<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8c2121"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StudentLoginActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/meeting"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#999999"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/meetingTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/meetingDateTextView"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/facultyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/student"
        android:layout_alignBottom="@+id/student"
        android:layout_alignLeft="@+id/meetingTimeTextView"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/meetingDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_marginRight="197dp"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="48dp"
        android:layout_marginTop="41dp"
        android:layout_toLeftOf="@+id/meetingDateTextView"
        android:text="@string/meeting_date_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="26dp"
        android:text="@string/student_name_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="27dp"
        android:text="@string/meeting_time_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <Button
        android:id="@+id/saveNotesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="23dp"
        android:text="@string/save_notes"
        android:textColor="#999999" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="475dp"
        android:layout_height="200dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="#999999"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_below="@+id/TextView02"
        android:layout_marginTop="20dp"
        android:text="@string/student_phone_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/student"
        android:layout_below="@+id/student"
        android:layout_marginTop="21dp"
        android:text="@string/student_email_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_below="@+id/TextView03"
        android:layout_marginTop="19dp"
        android:text="@string/location_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/facultyLocationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/facultyTextView"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/emailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView03"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/phoneField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView03"
        android:layout_alignBottom="@+id/TextView03"
        android:layout_alignLeft="@+id/emailField"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_centerVertical="true"
        android:text="@string/notes_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

</RelativeLayout>