<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8c2121"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StudentLoginActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/meeting"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#999999"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/meetingTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/meetingDateTextView"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/facultyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/meetingTimeTextView"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/meetingDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_marginRight="197dp"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="26dp"
        android:text="@string/faculty_member_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="27dp"
        android:text="@string/meeting_time_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <Button
        android:id="@+id/saveNotesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/notes"
        android:layout_below="@+id/notes"
        android:layout_marginTop="23dp"
        android:text="@string/save_notes"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/emailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneField"
        android:layout_below="@+id/phoneField"
        android:layout_marginTop="24dp"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/phoneField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/facultyTextView"
        android:layout_below="@+id/facultyTextView"
        android:layout_marginTop="25dp"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/facultyPhoneField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/phoneField"
        android:layout_alignBottom="@+id/phoneField"
        android:layout_alignLeft="@+id/textView4"
        android:text="@string/faculty_phone_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/facultyLocationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/facultyEmailField"
        android:layout_below="@+id/emailField"
        android:layout_marginTop="27dp"
        android:text="@string/location_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/facultyLocationTextView"
        android:layout_alignBottom="@+id/facultyLocationTextView"
        android:layout_alignLeft="@+id/emailField"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/notes"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="30dp"
        android:text="@string/meeting_date_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/facultyEmailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/facultyLocationTextView"
        android:layout_alignRight="@+id/textView3"
        android:text="@string/faculty_email_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/notesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/facultyLocationTextView"
        android:layout_below="@+id/facultyLocationTextView"
        android:layout_marginTop="48dp"
        android:text="@string/notes_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <EditText
        android:id="@+id/notes"
        android:layout_width="475dp"
        android:layout_height="200dp"
        android:layout_below="@+id/notesText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="#999999"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine" />

</RelativeLayout>