<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8c2121"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StudentLoginActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/meeting"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#999999"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/meetingTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/meetingDateTextView"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/facultyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/meetingTimeTextView"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/meetingDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_marginRight="197dp"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="26dp"
        android:text="@string/faculty_member_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="27dp"
        android:text="@string/meeting_time_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/staffLocationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/facultyTextView"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/studentPhoneField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView03"
        android:layout_alignBottom="@+id/TextView03"
        android:layout_alignLeft="@+id/studentEmailField"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="42dp"
        android:text="@string/meeting_date_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/studentEmailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView03"
        android:layout_alignLeft="@+id/facultyTextView"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/facultyEmailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView07"
        android:layout_alignBottom="@+id/TextView07"
        android:layout_alignLeft="@+id/studentPhoneField"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/facultyPhoneField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/facultyEmailField"
        android:layout_below="@+id/facultyEmailField"
        android:layout_marginTop="24dp"
        android:text="@string/test_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="30dp"
        android:text="@string/student_email_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_below="@+id/TextView02"
        android:layout_marginTop="28dp"
        android:text="@string/student_phone_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/TextView07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_below="@+id/TextView03"
        android:layout_marginTop="27dp"
        android:text="@string/faculty_email_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/TextView06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/facultyPhoneField"
        android:layout_alignBottom="@+id/facultyPhoneField"
        android:layout_alignLeft="@+id/TextView01"
        android:text="@string/faculty_phone_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView07"
        android:layout_below="@+id/TextView06"
        android:layout_marginTop="26dp"
        android:text="@string/location_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999" />

</RelativeLayout>